--- a/src/main/resources/templates/writer.html
+++ b/src/main/resources/templates/writer.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>글쓰기</title>
 </head>
 <body>
+<div th:replace="header.html::header"></div>
 
     <h3>글 작성</h3>
 
     <form id="board_write_form">
+        카테고리 : <select>
+            <option>자유게시판</option>
+            <option>칭찬합시다</option>
+            <option>분실물신고</option>
+            <option>우리이야기</option>
+                </select>
         제목 : <input type="text" name="btitle"><br>
         내용 : <input type="text" name="bcontent"><br>
         이름 : <input type="text" name="bwriter"><br>
         비밀번호 : <input type="text" name="bpw"><br>
         <br>
-        <button type="button" onclick="save()">등록</button>
         <button type="button"><a href="/">작성 취소</a></button>
+        <button type="button" onclick="save()">등록</button>
     </form>
 
 <script src="/js/BoardTable.js"></script>
